--- a/roles/oidc-extension/templates/relying-party.xml
+++ b/roles/oidc-extension/templates/relying-party.xml
@@ -47,9 +47,10 @@
                 <ref bean="SAML2.AttributeQuery" />
                 <ref bean="SAML2.ArtifactResolution" />
                 <ref bean="Liberty.SSOS" />
-       	       	<bean parent="OIDC.SSO" p:postAuthenticationFlows="attribute-release" />
-       	       	<bean parent="OIDC.UserInfo"/>
-       	       	<bean parent="OAUTH2.Revocation"/>
+                <bean parent="OIDC.SSO" p:postAuthenticationFlows="attribute-release" />
+                <bean parent="OIDC.UserInfo"/>
+                <bean parent="OAUTH2.Revocation"/>
+                <bean parent="OAUTH2.Introspection"/>
             </list>
         </property>
     </bean>
